2005-05-30  Roman Kennke  <roman@kennke.org>

	* javax/swing/JLayeredPane.java
	(putLayer): Implemented new method.

2005-05-30  Roman Kennke  <roman@kennke.org>

	* javax/swing/JFileChooser.java:
	Fixed values of some constant fields.

2005-05-30  Roman Kennke  <roman@kennke.org>

	* javax/swing/SwingUtilities.java:
	(getWindowAncestor): This method has to be static instead of
	non-static.

2005-05-29  Michael Koch  <konqueror@gmx.de>

	* java/util/LinkedHashMap.java (access): Set 'root.pred'.

2005-05-29  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* org/omg/CosNaming/_BindingIteratorImplBase.java ,
	org/omg/CosNaming/_NamingContextExtImplBase.java,
	org/omg/CosNaming/_NamingContextImplBase.java: Inherit from
	DynamicImplementation.
	* gnu/CORBA/ServiceRequestAdapter.java: New class.
	* gnu/CORBA/gnuNVList.java (add, add_item):
	Replacing null by constructed instance.

2005-05-29  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* org/omg/CORBA/Functional_ORB.java (serve, useProperties, init): Implementing
	the property-configurable time-outs. 

2005-05-29  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/CORBA/gnuRequest.java (p_invoke): Wrap the received UserException into
	UnknownUserException.
	* gnu/CORBA/streamReadyHolder.java: New wrapper for UserException. 
	* org/omg/CORBA/UnknownUserException.java: New exception.

2005-05-27  Roman Kennke  <roman@kennke.org>

	* javax/swing/AbstractButton.java:
	Bumped up serialVersionUID(s) to JDK1.4 compatibility.
	* javax/swing/ImageIcon.java: Likewise.
	* javax/swing/JFileChooser.java: Likewise.
	* javax/swing/JInternalFrame.java: Likewise.
	* javax/swing/JMenu.java: Likewise.
	* javax/swing/JRadioButton.java: Likewise.
	* javax/swing/JScrollPane.java: Likewise.
	* javax/swing/JSpinner.java: Likewise.
	* javax/swing/JTabbedPane.java: Likewise.
	* javax/swing/ImageIcons.java: Likewise.
	* javax/swing/JToggleButton.java: Likewise.
	* javax/swing/JToolTip.java: Likewise.